--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "tailwindcss": "^3.4.7",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "concurrently": "^6.5.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
