--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "colorthief": "^2.4.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "lucide-react": "^0.416.0",
