--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "concurrently": "^6.5.1"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "concurrently": "^6.5.1",
+    "prettier": "3.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
+    "format": "npx prettier . --write",
     "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
