--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -25,7 +24,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "concurrently": "^6.5.1",
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "stylelint": "^16.8.1",
+    "stylelint-config-standard": "^36.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
