--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "japanese-color-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://8bitgentleman.github.io/japanese-dictionary-of-color-combinations/",
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
